<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_nav_explore"
        android:title="@string/nav_explore" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/nav_saved" />
    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_sell" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_nav_messages"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
